the circle can fall and move left right