@@ -2,4 +2,6 @@ name := "SuikaGame"
 version := "1.0"
 scalaVersion := "2.13.12"
 
-libraryDependencies += "org.scalafx" %% "scalafx" % "21.0.0-R32"
+libraryDependencies += "org.scalafx" %% "scalafx" % "20.0.0-R31"
+
+javaOptions += "--add-modules=javafx.controls,javafx.fxml"
